base/media/sonarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarr
  namespace: media
  labels:
    app.kubernetes.io/name: sonarr
    app.kubernetes.io/part-of: homelab
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: sonarr
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8989
